<resources>
    <string name="app_name">Protectly</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyCy3tT0lLbPu8GNgfDf7lCS9YFzXwbMx-0</string>
    <string name="kontak">Kontak</string>
    <string name="rekam">Rekam</string>
    <string name="laporan">Laporan</string>
    <string name="edukasi">Edukasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="no_handphone">No.Handphone</string>
    <string name="tempat_tanggal_lahir">Tempat/Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="title_activity_lokasi2">LokasiActivity2</string>

</resources>