<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/title_home" />
    <item
        android:id="@+id/kontak"
        android:icon="@drawable/baseline_call_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/kontak" />
    <item
        android:id="@+id/rekam"
        android:icon="@drawable/baseline_camera_alt_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rekam" />
    <item
        android:id="@+id/laporan"
        android:icon="@drawable/baseline_report_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/laporan" />
    <item
        android:id="@+id/edukasi"
        android:icon="@drawable/baseline_school_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/edukasi" />
</menu>